--- a/index.html
+++ b/index.html
@@ -287,35 +287,40 @@
     </main>
     <footer class="footer-section">
         <div class="footer-div container">
-            <a class="logo-type" href="./index.html">Web<span class="studio-color-footer">Studio</span></a>
-            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
+            <ul class="footer-flex">
+                <li>
+                    <a class="logo-type" href="./index.html">Web<span class="studio-color-footer">Studio</span></a>
+                    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
                 solutions.</p>
+                </li>
+                <li>
+                    <p class="footer-text">Social Media</p>
+                    <div class="footer-social-media-icons">
+                        <div class="footer-icons">
+                            <svg class="footer-icons-social" width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </div>
+                        <div class="footer-icons">
+                            <svg class="footer-icons-social" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </div>
+                        <div class="footer-icons">
+                            <svg class="footer-icons-social" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </div>
+                        <div class="footer-icons">
+                            <svg class="footer-icons-social" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </div>
-        <div class="footer-social-media">
-            <p class="footer-text">Social Media</p>
-            <div class="footer-social-media-icons">
-                <div class="footer-icons">
-                    <svg class="footer-icons-social" width="24" height="24">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                </div>
-                <div class="footer-icons">
-                    <svg class="footer-icons-social" width="24" height="24">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                </div>
-                <div class="footer-icons">
-                    <svg class="footer-icons-social" width="24" height="24">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                </div>
-                <div class="footer-icons">
-                    <svg class="footer-icons-social" width="24" height="24">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                </div>
-            </div>
-        </div>
+        
     </footer>
 </body>
 </html>
