--- a/index.html
+++ b/index.html
@@ -92,46 +92,45 @@
         <section class="section-three">
             <div class="container three-div">
                 <h2 class="third-header">Our Team</h2>
-                <div class="team-list-div">
-                    <ul class="team-list">
-                        <li class="team">
-                            <img src="./images/img-3.jpg" alt="markguerrero" width="264" />
-                            <div class="team-info">
-                                <h3 class="team-members">Mark Guerrero</h3>
-                                <p class="team-text">Product Designer</p>
-                                <div class="team-social">
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-instagram"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-twitter"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-facebook"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-linkedin"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
+                <ul class="team-list">
+                    <li class="team">
+                        <img src="./images/img-3.jpg" alt="markguerrero" width="264" />
+                        <div class="team-info">
+                            <h3 class="team-members">Mark Guerrero</h3>
+                            <p class="team-text">Product Designer</p>
+                            <div class="team-social">
+                                <div class="team-icons">
+                                    <a class="team-icons-link" href="">
+                                        <svg class="team-icons-social" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </div>
+                                <div class="team-icons">
+                                    <a class="team-icons-link" href="">
+                                        <svg class="team-icons-social" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </div>
+                                <div class="team-icons">
+                                    <a class="team-icons-link" href="">
+                                        <svg class="team-icons-social" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </div>
+                                <div class="team-icons">
+                                    <a class="team-icons-link" href="">
+                                        <svg class="team-icons-social" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
                                 </div>
                             </div>
-                        </li>
-                        <li class="team">
+                        </div>
+                    </li>
+                    <li class="team">
                             <img src="./images/img-2.jpg" alt="tomford" width="264" />
                             <div class="team-info">
                                 <h3 class="team-members">Tom Ford</h3>
@@ -167,8 +166,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </li>
-                        <li class="team">
+                    </li>
+                    <li class="team">
                             <img src="./images/img-1.jpg" alt="camilagarcia" width="264" />
                             <div class="team-info">
                                 <h3 class="team-members">Camila Garcia</h3>
@@ -204,8 +203,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </li>
-                        <li class="team">
+                    </li>
+                    <li class="team">
                             <img src="./images/img.jpg" alt="danielwilson" width="264" />
                             <div class="team-info">
                                 <h3 class="team-members">Daniel Wilson</h3>
@@ -241,9 +240,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </li>
-                    </ul>
-                </div>
+                    </li>
+                </ul>
             </div>
             
         </section>
@@ -339,7 +337,7 @@
             solutions.</p>
             </div>
             <div class="social-media">
-                <p class="footer-social-media">Social Media</p>
+                <p class="footer-social-media">Social media</p>
                 <ul class="footer-flex">
                     <li class="footer-social-media-list">
                         <a class="footer-icons" href="">
