--- a/index.html
+++ b/index.html
@@ -98,148 +98,156 @@
                         <div class="team-info">
                             <h3 class="team-members">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
-                            <div class="team-social">
-                                <div class="team-icons">
-                                    <a class="team-icons-link" href="">
-                                        <svg class="team-icons-social" width="16" height="16">
+                            <div class="team-div">
+                                <ul class="team-social">
+                                    <li class="team-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="team-icons-social" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
-                                        </svg>
-                                    </a>
-                                </div>
-                                <div class="team-icons">
-                                    <a class="team-icons-link" href="">
-                                        <svg class="team-icons-social" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-twitter"></use>
-                                        </svg>
-                                    </a>
-                                </div>
-                                <div class="team-icons">
-                                    <a class="team-icons-link" href="">
-                                        <svg class="team-icons-social" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-facebook"></use>
-                                        </svg>
-                                    </a>
-                                </div>
-                                <div class="team-icons">
-                                    <a class="team-icons-link" href="">
-                                        <svg class="team-icons-social" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-linkedin"></use>
-                                        </svg>
-                                    </a>
-                                </div>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="team-icons-social" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-twitter"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="team-icons-social" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-facebook"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                    <li class="team-icons">
+                                        <a class="team-icons-link" href="">
+                                            <svg class="team-icons-social" width="16" height="16">
+                                                <use href="./images/icons.svg#icon-linkedin"></use>
+                                            </svg>
+                                        </a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </li>
                     <li class="team">
-                            <img src="./images/img-2.jpg" alt="tomford" width="264" />
-                            <div class="team-info">
-                                <h3 class="team-members">Tom Ford</h3>
-                                <p class="team-text">Frontend Developer</p>
-                                <div class="team-social">
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-instagram"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-twitter"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-facebook"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-linkedin"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                </div>
+                        <img src="./images/img-2.jpg" alt="tomford" width="264" />
+                        <div class="team-info">
+                            <h3 class="team-members">Tom Ford</h3>
+                            <p class="team-text">Frontend Developer</p>
+                            <div class="team-div">
+                                <ul class="team-social">
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                </ul>
                             </div>
+                        </div>
                     </li>
                     <li class="team">
-                            <img src="./images/img-1.jpg" alt="camilagarcia" width="264" />
-                            <div class="team-info">
-                                <h3 class="team-members">Camila Garcia</h3>
-                                <p class="team-text">Marketing</p>
-                                <div class="team-social">
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-instagram"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-twitter"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-facebook"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-linkedin"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                </div>
+                        <img src="./images/img-1.jpg" alt="camilagarcia" width="264" />
+                        <div class="team-info">
+                            <h3 class="team-members">Camila Garcia</h3>
+                            <p class="team-text">Marketing</p>
+                            <div class="team-div">
+                                    <ul class="team-social">
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                    </ul>
                             </div>
+                        </div>
                     </li>
                     <li class="team">
-                            <img src="./images/img.jpg" alt="danielwilson" width="264" />
-                            <div class="team-info">
-                                <h3 class="team-members">Daniel Wilson</h3>
-                                <p class="team-text">UI Designer</p>
-                                <div class="team-social">
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-instagram"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-twitter"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-facebook"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                    <div class="team-icons">
-                                        <a class="team-icons-link" href="">
-                                            <svg class="team-icons-social" width="16" height="16">
-                                                <use href="./images/icons.svg#icon-linkedin"></use>
-                                            </svg>
-                                        </a>
-                                    </div>
-                                </div>
+                        <img src="./images/img.jpg" alt="danielwilson" width="264" />
+                        <div class="team-info">
+                            <h3 class="team-members">Daniel Wilson</h3>
+                            <p class="team-text">UI Designer</p>
+                            <div class="team-div">
+                                <ul class="team-social">
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                        <li class="team-icons">
+                                            <a class="team-icons-link" href="">
+                                                <svg class="team-icons-social" width="16" height="16">
+                                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                </ul>
                             </div>
+                        </div>
                     </li>
                 </ul>
             </div>
