--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
             <nav class="nav-type">
                 <a class="logo-type" href="./index.html">Web<span class="studio-color">Studio</span></a>
                 <ul class="nav-ul">
-                    <li><a class="nav-menu" href="./index.html">Studio</a></li>
-                    <li><a class="nav-menu" href="">Portfolio</a></li>
-                    <li><a class="nav-menu" href="">Contacts</a></li>
+                    <li class="nav-item">
+                        <a class="menu-studio" href="./index.html">Studio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-menu" href="">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-menu" href="">Contacts</a>
+                    </li>
                 </ul>
             </nav>
             <address class="address-section">
@@ -98,8 +104,7 @@
                         <div class="team-info">
                             <h3 class="team-members">Mark Guerrero</h3>
                             <p class="team-text">Product Designer</p>
-                            <div class="team-div">
-                                <ul class="team-social">
+                            <ul class="team-social">
                                     <li class="team-icons">
                                         <a class="team-icons-link" href="">
                                             <svg class="team-icons-social" width="16" height="16">
@@ -128,8 +133,7 @@
                                             </svg>
                                         </a>
                                     </li>
-                                </ul>
-                            </div>
+                            </ul>
                         </div>
                     </li>
                     <li class="team">
@@ -137,8 +141,7 @@
                         <div class="team-info">
                             <h3 class="team-members">Tom Ford</h3>
                             <p class="team-text">Frontend Developer</p>
-                            <div class="team-div">
-                                <ul class="team-social">
+                            <ul class="team-social">
                                         <li class="team-icons">
                                             <a class="team-icons-link" href="">
                                                 <svg class="team-icons-social" width="16" height="16">
@@ -167,8 +170,7 @@
                                                 </svg>
                                             </a>
                                         </li>
-                                </ul>
-                            </div>
+                            </ul>
                         </div>
                     </li>
                     <li class="team">
@@ -176,8 +178,7 @@
                         <div class="team-info">
                             <h3 class="team-members">Camila Garcia</h3>
                             <p class="team-text">Marketing</p>
-                            <div class="team-div">
-                                    <ul class="team-social">
+                            <ul class="team-social">
                                         <li class="team-icons">
                                             <a class="team-icons-link" href="">
                                                 <svg class="team-icons-social" width="16" height="16">
@@ -206,8 +207,7 @@
                                                 </svg>
                                             </a>
                                         </li>
-                                    </ul>
-                            </div>
+                            </ul>
                         </div>
                     </li>
                     <li class="team">
@@ -215,8 +215,7 @@
                         <div class="team-info">
                             <h3 class="team-members">Daniel Wilson</h3>
                             <p class="team-text">UI Designer</p>
-                            <div class="team-div">
-                                <ul class="team-social">
+                            <ul class="team-social">
                                         <li class="team-icons">
                                             <a class="team-icons-link" href="">
                                                 <svg class="team-icons-social" width="16" height="16">
@@ -245,7 +244,7 @@
                                                 </svg>
                                             </a>
                                         </li>
-                                </ul>
+                            </ul>
                             </div>
                         </div>
                     </li>
